--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
             android:name=".ui.FoodCaloriesReviewActivity"
             android:exported="false" />
         <activity
+            android:name=".ui.GamificationActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.AddFoodActivity"
             android:exported="false" />
         <activity
