success to show recyclerview history food for differen date, success POST food manual

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
             android:name=".ui.AddFoodActivity"
             android:exported="false" />
         <activity
+            android:name=".ui.AddFoodManualActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.SuccessPaymentActivity"
             android:exported="false" />
         <activity
